examples/lamp-website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lamp
  labels:
    app: lamp
spec:
  ports:
  - port: 80
  selector:
    app: lamp
